left bar expands when hovered in smaller view

--- a/react-app/src/components/ConversationList/ConversationList.module.sass
+++ b/react-app/src/components/ConversationList/ConversationList.module.sass
@@ -32,6 +32,7 @@
 
 .inner_wrapper
     list-style-type: none
+    position: relative
 
 .name
     font-weight: 600
@@ -55,6 +56,8 @@
 
 .wrapper
     overflow-y: scroll
+    position: relative
+    width: 100%
 
 .your_move
     margin: 10px
