--- a/react-app/src/components/StaticLeftSettingsBar/StaticLeftSettingsBar.module.sass
+++ b/react-app/src/components/StaticLeftSettingsBar/StaticLeftSettingsBar.module.sass
@@ -50,6 +50,8 @@
 
 .inside
     width: 350px
+    +d
+      width: 300px
 
 .wrapper
     background-color: $white
@@ -58,3 +60,5 @@
     width: 350px
     height: 100%
     position: relative
+    +d
+      width: 300px
