--- a/react-app/src/components/ConversationList/ConversationList.module.sass
+++ b/react-app/src/components/ConversationList/ConversationList.module.sass
@@ -58,6 +58,9 @@
     overflow-y: scroll
     position: relative
     width: 100%
+    height: 100%
+    &:-webkit-scrollbar
+        display: none
 
 .your_move
     margin: 10px
